--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Configuration-Management-Files/Misc/variables.env
+Configuration-Management-Files/Ansible/hosts*
 Logo/Logo-PS.psd
 Logo/Logo-PS-2.psd
+
